implemented displaying data to their respective textboxes upon selecting a monster

--- a/Monster LookUp/Monster LookUp.csproj
+++ b/Monster LookUp/Monster LookUp.csproj
@@ -93,6 +93,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBConnector.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +101,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MonsterFilter.cs" />
+    <Compile Include="PopulateViews.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TooltipHandler.cs" />
